deployment/demo.bct.trade/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terminal-ui-develop
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: terminal-ui
    feature: develop
  type: ClusterIP
